2006-02-27  Glynn Foster <glynn.foster@sun.com>

	* gnome-default-applications.xml.in: Fix typos.

2006-02-27  Fryderyk Dziarmagowski  <freetz@pld-linux.org>

	* gnome-default-applications.xml.in: fix Sylpheed Claws executable
	name. Closes part of bug #332659.

2006-02-14  Luca Cavalli <loopback@slackit.org>

	* gnome-da-capplet.c: (web_browser_update_combo_box),
	(web_browser_update_radio_buttons), (web_gconf_changed_cb),
	(show_dialog): disable "toggle" signal emission during UI update,
	thus preventing calling twice the same code. Closes bug #328094.

2006-02-08  Luca Cavalli <loopback@slackit.org>

	* gnome-da-capplet.c: (web_radiobutton_toggled_cb),
	(web_item_comp), (mail_gconf_changed_cb), (term_gconf_changed_cb),
	(show_dialog):
	* gnome-da-xml.c: (gnome_da_xml_load_xml): fix some compilation
	warnings. Close bug #330384.

2006-01-28  chpe <chpe@gnome.org>

	Fixes #327220

	* gnome-default-applications.xml.in: use "Epiphany Web Browser",
	like in the .desktop file and use long options for Epiphany.

2006-01-28  Rodrigo Moya <rodrigo@novell.com>

	Fixes part of #327749

	* gnome-default-applications-properties.glade:
	* gnome-da-capplet.c (web_combo_changed_cb, mail_combo_changed_cb,
	terminal_combo_changed_cb, web_browser_update_combo_box,
	mail_reader_update_combo_box, terminal_update_combo_box): don't set
	entries' sensitivity, just disable input on them.

2006-01-28  Luca Cavalli <loopback@slackit.org>

	* gnome-da-capplet.c: (web_combo_changed_cb),
	(mail_combo_changed_cb), (terminal_combo_changed_cb),
	(web_browser_update_combo_box), (mail_reader_update_combo_box),
	(terminal_update_combo_box), (web_gconf_changed_cb),
	(mail_gconf_changed_cb), (term_gconf_changed_cb), (show_dialog):
	update custom command entries also when predefined application is
	selected. Closes bug #327749.

2006-01-17  Luca Cavalli  <loopback@slackit.org>

	* gnome-default-applications.xml.in: fixed Thunderbird command
	line parameter. Closes bug #326808.
