@@ -1,3 +1,8 @@
+2006-02-28  Takeshi Aihana  <aihana@jcom.home.ne.jp>
+
+	* gnome-da-capplet.c: (show_dialog), (main): use correct text domain
+	name. Closes bug #332833.
+
 2006-02-27  Glynn Foster <glynn.foster@sun.com>
 
 	* gnome-default-applications.xml.in: Fix typos.
